# app/src/test/resources/api-spec.yaml
@@ -6,61 +6,6 @@ servers:
 - url: ""
   description: Generated server url
 paths:
-  /api/workspaces/{workspaceId}/incomes/{incomeId}:
-    get:
-      tags:
-      - incomes-api
-      operationId: getIncome
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: incomeId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IncomeDto"
-    put:
-      tags:
-      - incomes-api
-      operationId: updateIncome
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: incomeId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/EditIncomeDto"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IncomeDto"
   /api/users/{userId}:
     get:
       tags:
@@ -110,81 +55,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UsersApiUpdateUserErrors"
-  /api/workspaces/{workspaceId}/incomes:
-    get:
-      tags:
-      - incomes-api
-      operationId: getIncomes
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: sortBy
-        in: query
-        required: false
-        schema:
-          type: string
-          enum:
-          - _NOT_SUPPORTED
-      - name: "freeSearchText[eq]"
-        in: query
-        required: false
-        schema:
-          type: string
-      - name: pageNumber
-        in: query
-        required: false
-        schema:
-          type: integer
-          format: int32
-      - name: pageSize
-        in: query
-        required: false
-        schema:
-          type: integer
-          format: int32
-      - name: sortOrder
-        in: query
-        required: false
-        schema:
-          type: string
-          enum:
-          - asc
-          - desc
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ApiPageIncomeDto"
-    post:
-      tags:
-      - incomes-api
-      operationId: createIncome
-      parameters:
-      - name: workspaceId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/EditIncomeDto"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/IncomeDto"
   /api/workspaces/{workspaceId}/documents:
     get:
       tags:
@@ -518,131 +388,6 @@ paths:
                   $ref: "#/components/schemas/DataBuffer"
 components:
   schemas:
-    EditIncomeDto:
-      type: object
-      properties:
-        category:
-          type: integer
-          format: int64
-        dateReceived:
-          type: string
-          format: date
-        title:
-          type: string
-          minLength: 1
-        currency:
-          type: string
-          minLength: 1
-        originalAmount:
-          type: integer
-          format: int64
-        convertedAmountInDefaultCurrency:
-          type: integer
-          format: int64
-        useDifferentExchangeRateForIncomeTaxPurposes:
-          type: boolean
-        incomeTaxableAmountInDefaultCurrency:
-          type: integer
-          format: int64
-        attachments:
-          type: array
-          items:
-            type: integer
-            format: int64
-        notes:
-          type: string
-          maxLength: 1024
-          minLength: 0
-        generalTax:
-          type: integer
-          format: int64
-        linkedInvoice:
-          type: integer
-          format: int64
-      required:
-      - currency
-      - dateReceived
-      - originalAmount
-      - title
-      - useDifferentExchangeRateForIncomeTaxPurposes
-    IncomeAmountsDto:
-      type: object
-      properties:
-        originalAmountInDefaultCurrency:
-          type: integer
-          format: int64
-        adjustedAmountInDefaultCurrency:
-          type: integer
-          format: int64
-    IncomeDto:
-      type: object
-      properties:
-        category:
-          type: integer
-          format: int64
-        title:
-          type: string
-        createdAt:
-          type: string
-          format: date-time
-        dateReceived:
-          type: string
-          format: date
-        currency:
-          type: string
-        originalAmount:
-          type: integer
-          format: int64
-        attachments:
-          type: array
-          items:
-            type: integer
-            format: int64
-        notes:
-          type: string
-        id:
-          type: integer
-          format: int64
-        version:
-          type: integer
-          format: int32
-        status:
-          type: string
-          enum:
-          - FINALIZED
-          - PENDING_CONVERSION
-          - PENDING_CONVERSION_FOR_TAXATION_PURPOSES
-        linkedInvoice:
-          type: integer
-          format: int64
-        generalTax:
-          type: integer
-          format: int64
-        generalTaxRateInBps:
-          type: integer
-          format: int32
-        generalTaxAmount:
-          type: integer
-          format: int64
-        convertedAmounts:
-          $ref: "#/components/schemas/IncomeAmountsDto"
-        incomeTaxableAmounts:
-          $ref: "#/components/schemas/IncomeAmountsDto"
-        useDifferentExchangeRateForIncomeTaxPurposes:
-          type: boolean
-      required:
-      - attachments
-      - convertedAmounts
-      - createdAt
-      - currency
-      - dateReceived
-      - id
-      - incomeTaxableAmounts
-      - originalAmount
-      - status
-      - title
-      - useDifferentExchangeRateForIncomeTaxPurposes
-      - version
     UpdateUserRequestDto:
       type: object
       properties:
@@ -740,27 +485,6 @@ components:
           minLength: 0
       required:
       - password
-    ApiPageIncomeDto:
-      type: object
-      properties:
-        pageNumber:
-          type: integer
-          format: int32
-        pageSize:
-          type: integer
-          format: int32
-        totalElements:
-          type: integer
-          format: int64
-        data:
-          type: array
-          items:
-            $ref: "#/components/schemas/IncomeDto"
-      required:
-      - data
-      - pageNumber
-      - pageSize
-      - totalElements
     ApiPageDocumentDto:
       type: object
       properties:
